# chip8-gui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/app/: app.cpp  app.h
src/chip8/: actions.cpp  actions.h  chip8.cpp  chip8.h  renderer.cpp  renderer.h  shader.cpp  shader.h
src/shaders/: chip8.frag  chip8.vert
src/ui/: ui.cpp  ui.h  uiState.cpp  uiState.h
